--- a/visualize/index.html
+++ b/visualize/index.html
@@ -3,13 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
   <link rel="stylesheet" href="index.css">
   <title>Visualize</title>
 </head>
 <body>
 
   <div class="container">
-    
+    <header class="header">
+      <span class="avatar">
+        <!--<img src="img/avatar.jpeg" alt="avatar">-->
+      </span>
+      <h1>This is <strong>Visualize</strong>, a responsive site template designed by TEMPLATED</h1>
+      <ul class="social_icons">
+        <li>
+          <a href="#" class="icon">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="icon">
+            <i class="fab fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="icon">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="icon">
+            <i class="fab fa-500px"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#" class="icon">
+            <i class="fas fa-envelope"></i>
+          </a>
+        </li>
+      </ul>
+    </header>
+    <section class="main"></section>
+    <footer class="footer"></footer>
   </div>
 
 </body>
