--- a/visualize/index.html
+++ b/visualize/index.html
@@ -43,7 +43,109 @@
         </li>
       </ul>
     </header>
-    <section class="main"></section>
+    <section class="main">
+
+      <section class="thumbnails">
+        <a>
+          <img src="img/l1.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l2.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l3.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l4.jpeg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l5.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+      </section>
+
+      <section class="thumbnails">
+        <a>
+          <img src="img/l5.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l4.jpeg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l3.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l2.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l1.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+      </section>
+
+      <section class="thumbnails">
+        <a>
+          <img src="img/l1.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l2.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l3.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l5.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l4.jpeg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+      </section>
+
+      <section class="thumbnails">
+        <a>
+          <img src="img/l2.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l1.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l5.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
+        <a>
+          <img src="img/l3.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+        <a>
+          <img src="img/l4.jpeg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+      </section>
+
+    </section>
     <footer class="footer"></footer>
   </div>
 
