--- a/visualize/index.html
+++ b/visualize/index.html
@@ -8,13 +8,12 @@
   <title>Visualize</title>
 </head>
 <body>
-
   <div class="container">
     <header class="header">
       <span class="avatar">
         <!--<img src="img/avatar.jpeg" alt="avatar">-->
       </span>
-      <h1>This is <strong>Visualize</strong>, a responsive site template designed by TEMPLATED</h1>
+      <h1>This is <strong>Visualize</strong>, a responsive site template</h1>
       <ul class="social_icons">
         <li>
           <a href="#" class="icon">
@@ -72,32 +71,32 @@
 
       <section class="thumbnails">
         <a>
-          <img src="img/l5.jpg" alt="">
+          <img src="img/l6.jpg" alt="">
           <h3>Desert Landscape Paintings</h3>
         </a>
+        <a>
+          <img src="img/l10.jpg" alt="">
+          <h3>Desert Landscape Paintings</h3>
+        </a>
+
         <a>
           <img src="img/l4.jpeg" alt="">
           <h3>Desert Landscape Paintings</h3>
         </a>
 
         <a>
-          <img src="img/l3.jpg" alt="">
-          <h3>Desert Landscape Paintings</h3>
-        </a>
-
-        <a>
-          <img src="img/l2.jpg" alt="">
+          <img src="img/l7.jpg" alt="">
           <h3>Desert Landscape Paintings</h3>
         </a>
         <a>
-          <img src="img/l1.jpg" alt="">
+          <img src="img/l8.jpg" alt="">
           <h3>Desert Landscape Paintings</h3>
         </a>
       </section>
 
       <section class="thumbnails">
         <a>
-          <img src="img/l1.jpg" alt="">
+          <img src="img/l9.png" alt="">
           <h3>Desert Landscape Paintings</h3>
         </a>
         <a>
@@ -148,6 +147,5 @@
     </section>
     <footer class="footer"></footer>
   </div>
-
 </body>
 </html>
