--- a/visualize/index.html
+++ b/visualize/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header class="header">
       <span class="avatar">
-        <!--<img src="img/avatar.jpeg" alt="avatar">-->
+        <img src="img/avatar.jpg" alt="avatar">
       </span>
       <h1>This is <strong>Visualize</strong>, a responsive site template</h1>
       <ul class="social_icons">
