--- a/visualize/index.html
+++ b/visualize/index.html
@@ -13,7 +13,7 @@
       <span class="avatar">
         <img src="img/avatar.jpg" alt="avatar">
       </span>
-      <h1>This is <strong>Visualize</strong>, a responsive site template</h1>
+      <h1>Lorem ipsum dolor sit amet, <strong>adipiscing elit</strong>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</h1>
       <ul class="social_icons">
         <li>
           <a href="#" class="icon">
