--- a/forty/index.html
+++ b/forty/index.html
@@ -24,13 +24,13 @@
             <p>
               A ALIQUET DIAM ALIQUAM INTEGER AT CUBILIA SED ALIQUAM LOREM DIS EGESTAS COMMODO.
             </p>
-            <a class="button">get started <i class="fas fa-long-arrow-alt-right"></i></a>
+            <a id="getStartedAnchor" href="#one" class="button">get started <i class="fas fa-long-arrow-alt-right"></i></a>
           </div>
         </div>
       </section>
 
       <section class="main">
-        <section class="one">
+        <section id="one" class="one">
           <div class="box">
             <h3>Aliquam</h3>
             <p>Ipsum dolor sit amet</p>
@@ -63,6 +63,31 @@
             <a class="button">Get Started <i class="fas fa-long-arrow-alt-right"></i></a>
           </div>
         </section>
+      </section>
+
+      <section class="contact">
+        <div class="contact_form_container">
+          <form class="contact_form">
+            <div class="fields">
+              <label>Name</label>
+              <input name="name" type="text">
+            </div>
+
+            <div class="fields">
+              <label>Email</label>
+              <input name="email" type="email">
+            </div>
+
+            <div class="textarea_field">
+              <label>Message</label>
+              <textarea name="message" rows="7"></textarea>
+            </div>
+
+          </form>
+        </div>
+        <div class="contact_info">
+
+        </div>
       </section>
 
       <footer></footer>
