--- a/forty/index.html
+++ b/forty/index.html
@@ -83,6 +83,11 @@
               <textarea name="message" rows="7"></textarea>
             </div>
 
+            <div class="form_actions">
+               <a href="#" class="button submit">Send Message</a>
+               <a href="#" class="button clear">Clear</a>
+            </div>
+
           </form>
         </div>
         <div class="contact_info">
