info box and icons sections

--- a/forty/index.html
+++ b/forty/index.html
@@ -91,11 +91,43 @@
           </form>
         </div>
         <div class="contact_info">
-
+          <div class="info_box">
+            <div class="info_box_content">
+              <span class="fas fa-envelope"></span>
+              <h3>Email</h3>
+              <p>test@gmail.com</p>
+            </div>
+          </div>
+          <div class="info_box">
+            <div class="info_box_content">
+              <span class="fas fa-phone-alt"></span>
+              <h3>Phone</h3>
+              <p>(000) 000-0000 00000</p>
+            </div>
+          </div>
+          <div class="info_box">
+            <div class="info_box_content">
+              <span class="fas fa-home"></span>
+              <h3>Address</h3>
+              <p>1234 Somewhere Road #5432</p>
+              <p>Nashville, TN 00000</p>
+              <p>United States of America</p>
+            </div>
+          </div>
         </div>
       </section>
 
-      <footer></footer>
+      <footer>
+        <div class="inner">
+          <ul class="icons">
+            <li><a href="#" class="fab icon fa-twitter"></a></li>
+            <li><a href="#" class="fab icon fa-facebook-f"></a></li>
+            <li><a href="#" class="fab icon fa-instagram"></a></li>
+            <li><a href="#" class="fab icon fa-github"></a></li>
+            <li><a href="#" class="fab icon fa-linkedin-in"></a></li>
+          </ul>
+        </div>
+      </footer>
     </div>
 
 
