--- a/spectral/index.html
+++ b/spectral/index.html
@@ -14,7 +14,7 @@
       <h1 class="header__title">Spectral</h1>
       <div class="header__nav"><a class="header__logo p-r--1 fas fa-bars"></a></div>
     </header>
-    <section class="banner uppercase p-6-3">
+    <section class="banner">
       <div class="inner">
         <h2 class="p-0-3">spectral</h2>
         <p>Blandit duis accumsan <br>
@@ -24,10 +24,10 @@
         <a class="btn--primary" href="">activate</a>
       </div>
     </section>
-    <section class="section-one p-3-2">
+    <section class="section-one">
       <div class="inner">
-        <h2 class="uppercase">Arcu aliquet vel lobortis ata nisl<br> eget augue amet aliquet nisl cep donec</h2>
-        <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br>  fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+        <h2>Arcu aliquet vel lobortis ata nisl eget augue amet aliquet nisl cep donec</h2>
+        <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
         <ul class="section-one__icons p-2-0">
           <li><i class="far fa-gem"></i></li>
           <li><i class="fas fa-heart"></i></li>
@@ -40,7 +40,7 @@
         <div class="section-two__spotlight__image">
           <img src="img/pic01.jpg">
         </div>
-        <div class="section-two__spotlight__content p-1-3">
+        <div class="section-two__spotlight__content">
           <h2>Magna primis lobortis sed ullamcorper</h2>
           <p>
             Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.
@@ -51,7 +51,7 @@
         <div class="section-two__spotlight__image">
           <img src="img/pic02.jpg">
         </div>
-        <div class="section-two__spotlight__content p-1-3">
+        <div class="section-two__spotlight__content">
           <h2>Magna primis lobortis sed ullamcorper</h2>
           <p>
             Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.
@@ -62,7 +62,7 @@
         <div class="section-two__spotlight__image">
           <img src="img/pic03.jpg">
         </div>
-        <div class="section-two__spotlight__content p-1-3">
+        <div class="section-two__spotlight__content">
           <h2>Magna primis lobortis sed ullamcorper</h2>
           <p>
             Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.
@@ -71,13 +71,63 @@
       </section>
     </section>
     <section class="section-three">
+      <div class="section-three__header">
+        <h2>Accumsan mus tortor nunc aliquet</h2>
+        <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend   fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+      </div>
+      <div class="section-three__content">
+        <i class="fas fa-paper-plane"></i>
+        <h3>Arcu accumsan</h3>
+        <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+      </div>
+      <div class="section-three__content">
+        <i class="fas fa-paper-plane"></i>
+        <h3>Arcu accumsan</h3>
+        <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+      </div>
+      <div class="section-three__content">
+        <i class="fas fa-paper-plane"></i>
+        <h3>Arcu accumsan</h3>
+        <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+      </div>
+      <div class="section-three__content">
+        <i class="fas fa-paper-plane"></i>
+        <h3>Arcu accumsan</h3>
+        <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+      </div>
+      <div class="section-three__content">
+        <i class="fas fa-paper-plane"></i>
+        <h3>Arcu accumsan</h3>
+        <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+      </div>
       <div class="section-three__content">
         <i class="fas fa-paper-plane"></i>
         <h3>Arcu accumsan</h3>
         <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
       </div>
     </section>
-    <footer></footer>
+    <section class="banner banner--mini p-1-3">
+      <div class="inner">
+        <h2 class="p-0-3">spectral</h2>
+        <p>Blandit duis accumsan <br>
+          arcu sagittis viverra <br>
+          blandit at Interdum.
+        </p>
+        <a class="btn--primary" href="">activate</a>
+        <br>
+        <a class="btn--secondary" href="">learn more</a>
+      </div>
+    </section>
+    <footer class="footer p-3-3">
+      <ul class="footer__icons">
+        <li><i class="fab fa-facebook-f"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fab fa-instagram"></i></li>
+        <li><i class="fas fa-envelope"></i></li>
+        <li><i class="fas fa-globe"></i></li>
+      </ul>
+      <p>© Untitled</p>
+    </footer>
   </div>
   
   <script type="text/javascript" src="index.js"></script>
