--- a/spectral/index.html
+++ b/spectral/index.html
@@ -17,8 +17,8 @@
     <section class="banner">
       <div class="inner">
         <h2 class="p-0-3">spectral</h2>
-        <p>Blandit duis accumsan <br>
-          arcu sagittis viverra <br>
+        <p>Blandit duis accumsan
+          arcu sagittis viverra
           blandit at Interdum.
         </p>
         <a class="btn--primary" href="">activate</a>
