add side navigation

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <header class="header uppercase">
       <h1 class="header__title">Spectral</h1>
-      <div class="header__nav"><a class="header__logo p-r--1 fas fa-bars"></a></div>
+      <div class="header__nav"><a onclick="openNav()" class="header__logo p-r--1 fas fa-bars"></a></div>
     </header>
     <section class="banner">
       <div class="inner">
@@ -128,6 +128,17 @@
       </ul>
       <p>© Untitled</p>
     </footer>
+  </div>
+
+  <div class="sidenav">
+    <ul>
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <li><a>home</a></li>
+      <li><a>about us</a></li>
+      <li><a>jobs</a></li>
+      <li><a>sign up</a></li>
+      <li><a>log in</a></li>
+    </ul>
   </div>
   
   <script type="text/javascript" src="index.js"></script>
