--- a/arch/index.html
+++ b/arch/index.html
@@ -9,7 +9,70 @@
 <body>
 
   <div class="container">
-    
+
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
+    <article class="card" role="article">
+      <a href="#">
+        <div class="card-text">
+          <div class="card-meta">Architecture</div>
+          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+        </div>
+        <img class="card-image" src="img/img-1.jpg" />
+      </a>
+    </article>
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
