--- a/arch/index.html
+++ b/arch/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
 
+  <header class="header">
+    <h1>A Photographer’s Weekend House By General Design</h1>
+  </header>
+
   <div class="container">
 
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Canada</div>
+          <h2 class="card-title">Pavillon du Lac / Daoust Lestage</h2>
         </div>
         <img class="card-image" src="img/img-1.jpg" />
       </a>
@@ -22,28 +26,28 @@
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Japan</div>
+          <h2 class="card-title">Four Leaves Villa / KIAS </h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-2.jpg" />
       </a>
     </article>
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Canada</div>
+          <h2 class="card-title">Lake Manitouwabing Residence / MJMA</h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-3.jpg" />
       </a>
     </article>
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Colombia</div>
+          <h2 class="card-title">Candelaria House / Llano Arquitectos </h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-4.jpg" />
       </a>
     </article>
     <article class="card" role="article">
