--- a/arch/index.html
+++ b/arch/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="header">
-    <h1>A Photographer’s Weekend House By General Design</h1>
+    <h1>A Photographer’s Weekend House</h1>
   </header>
 
   <div class="container">
