add filan content

--- a/arch/index.html
+++ b/arch/index.html
@@ -53,37 +53,37 @@
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Brazil</div>
+          <h2 class="card-title">Peninsula House / Bernardes Arquitetura </h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-5.jpg" />
       </a>
     </article>
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Norway</div>
+          <h2 class="card-title">House on an Island / Atelier Oslo</h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-6.jpg" />
       </a>
     </article>
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Thailand</div>
+          <h2 class="card-title">Y/A/O Residence / Octane architect & design</h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-7.jpg" />
       </a>
     </article>
     <article class="card" role="article">
       <a href="#">
         <div class="card-text">
-          <div class="card-meta">Architecture</div>
-          <h2 class="card-title">A Photographer’s Weekend House By General Design</h2>
+          <div class="card-meta">Greece</div>
+          <h2 class="card-title">Patio House / OOAK Architects </h2>
         </div>
-        <img class="card-image" src="img/img-1.jpg" />
+        <img class="card-image" src="img/img-8.jpg" />
       </a>
     </article>
   </div>
