--- a/spectral/index.html
+++ b/spectral/index.html
@@ -17,8 +17,9 @@
     </header>
     <section class="banner">
       <div class="inner">
-        <h2 class="p-0-3">spectral</h2>
-        <p>Blandit duis accumsan
+        <h2>spectral</h2>
+        <p>
+          Blandit duis accumsan
           arcu sagittis viverra
           blandit at Interdum.
         </p>
