improvements larrge screen

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -31,9 +31,9 @@
         <h2>Arcu aliquet vel lobortis ata nisl eget augue amet aliquet nisl cep donec</h2>
         <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
         <ul class="section-one__icons p-2-0">
-          <li><i class="far fa-gem"></i></li>
-          <li><i class="fas fa-heart"></i></li>
-          <li><i class="fas fa-code"></i></li>
+          <li><i class="far fa-gem icon-1"></i></li>
+          <li><i class="fas fa-heart icon-2"></i></li>
+          <li><i class="fas fa-code icon-3"></i></li>
         </ul>
       </div>
     </section>
