--- a/spectral/index.html
+++ b/spectral/index.html
@@ -25,6 +25,7 @@
         </p>
         <a class="btn--primary" href="">activate</a>
       </div>
+      <a href="#one" class="more scrolly">Learn More<i class="fas fa-arrow-down more-icon"></i></a>
     </section>
     <section class="section-one">
       <div class="inner">
