header appear in scroll lg screen

--- a/spectral/index.html
+++ b/spectral/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div class="container">
-    <header class="header uppercase">
-      <h1 class="header__title">Spectral</h1>
+    <header class="header uppercase alt">
+      <h1 class="header__title alt-title">Spectral</h1>
       <div class="header__nav"><a onclick="openNav()" class="header__logo p-r--1 fas fa-bars"></a></div>
     </header>
     <section class="banner">
@@ -27,7 +27,7 @@
       </div>
       <a href="#one" class="more scrolly">Learn More<i class="fas fa-arrow-down more-icon"></i></a>
     </section>
-    <section class="section-one">
+    <section id="one" class="section-one">
       <div class="inner">
         <h2>Arcu aliquet vel lobortis ata nisl eget augue amet aliquet nisl cep donec</h2>
         <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
