--- a/spectral/index.html
+++ b/spectral/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <header class="header uppercase alt">
       <h1 class="header__title alt-title">Spectral</h1>
-      <div class="header__nav"><a onclick="openNav()" class="header__logo p-r--1 fas fa-bars"></a></div>
+      <div class="header__nav"><a onclick="openNav()" class="header__logo fas fa-bars"></a></div>
     </header>
     <section class="banner">
       <div class="inner">
@@ -31,7 +31,7 @@
       <div class="inner">
         <h2>Arcu aliquet vel lobortis ata nisl eget augue amet aliquet nisl cep donec</h2>
         <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-        <ul class="section-one__icons p-2-0">
+        <ul class="section-one__icons">
           <li><i class="far fa-gem icon-1"></i></li>
           <li><i class="fas fa-heart icon-2"></i></li>
           <li><i class="fas fa-code icon-3"></i></li>
@@ -109,9 +109,9 @@
         <p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
       </div>
     </section>
-    <section class="banner banner--mini p-1-3">
+    <section class="banner banner--mini">
       <div class="inner">
-        <h2 class="p-0-3">spectral</h2>
+        <h2 class="">spectral</h2>
         <p>Blandit duis accumsan <br>
           arcu sagittis viverra <br>
           blandit at Interdum.
@@ -121,7 +121,7 @@
         <a class="btn--secondary" href="">learn more</a>
       </div>
     </section>
-    <footer class="footer p-3-3">
+    <footer class="footer">
       <ul class="footer__icons">
         <li><i class="fab fa-facebook-f"></i></li>
         <li><i class="fab fa-twitter"></i></li>
