--- a/arch/index.html
+++ b/arch/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/scss" href="scss/style.scss">
+  <link rel="stylesheet" type="text/css" href="scss/style.min.css">
   <title>Arch</title>
 </head>
 <body>
